chuyển hình ảnh sang media folder, đổi field ảnh từ charField sang imageField

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -38,9 +38,7 @@
                     <tbody>
                     {% for detailShoe in detail_shoes %}
                         <tr>
-                            <td><img width="100" src="
-                                    {% static 'mainapp/img/products/' %}{{ shoe_thumbnails|get_item:detailShoe.id }}"
-                                     alt=""></td>
+                            <td><img width="100" src="{{ shoe_thumbnails|get_item:detailShoe.id }}" alt=""></td>
                             <td>
                                 <p class="hidelongtext
                                 {% if status_code|get_item:detailShoe.id == False %}
