--- a/coupon/templates/coupon/coupon.html
+++ b/coupon/templates/coupon/coupon.html
@@ -6,11 +6,14 @@
                 {% for coupon in coupons %}
                     <div class="row-fluid">
                         <div class="span2">
-                            <img src="assets/img/a.jpg" alt="">
+                            {% if coupon.couponImage %}
+                                <img src="{{ coupon.couponImage.url }}" alt="">
+                            {% endif %}
                         </div>
                         <div class="span6">
                             <h5>{{ coupon.couponTitle }}</h5>
                             <p>{{ coupon.couponDescription }}</p>
+                            <p><i>Hạn sử dụng: <b>{{ coupon.expirationDate|date:'d-m-Y' }}</b></i></p>
                         </div>
                         <div class="span4 alignR">
                             <form class="form-horizontal qtyFrm">
@@ -20,26 +23,28 @@
                                 {% ifequal coupon.discountRate 0 %}
                                     <h3>giảm ngay {{ coupon.discountAmount }} đ</h3>
                                 {% endifequal %}
+                                <label class="checkbox" style="margin-bottom: 20px;">
+                                    Số lượt còn lại: <b>{{ coupon.couponAmount }}</b>
+                                </label>
                                 <div class="btn-group">
                                     <p class="defaultBtn" id="copyTarget">
-                                        <span class="icon-double-angle-left"></span>{{ coupon.couponCode }}<span class="icon-double-angle-right"></span>
+                                        <span class="icon-double-angle-left"></span>{{ coupon.couponCode }}<span
+                                            class="icon-double-angle-right"></span>
                                     </p>
-                                    <a href="" class="shopBtn" id="copyButton">Copy</a>
+                                    <label class="shopBtn btn_cpy" id="copyButton">Copy</label>
                                 </div>
                             </form>
                         </div>
-                        </form>
                     </div>
-                    </div>
-                    <hr class="soften">
+                    <hr class="soften" style="height: 5px">
                 {% endfor %}
             {% endif %}
+        </div>
     </div>
-    <script>
-        document.getElementById("copyButton").addEventListener("click", function () {
-            copyToClipboard(document.getElementById("copyTarget"));
-        });
+{% endblock %}
 
+{% block insert_script %}
+    <script>
         function copyToClipboard(elem) {
             // create hidden text element, if it doesn't already exist
             var targetId = "_hiddenCopyText_";
@@ -89,5 +94,17 @@
             }
             return succeed;
         }
+
+        window.onload = function () {
+
+            [...document.querySelectorAll('.btn_cpy')].forEach(function (item) {
+
+                item.addEventListener('click', function () {
+
+                    copyToClipboard(item);
+                    alert('Copy mã thành công');
+                });
+            });
+        };
     </script>
 {% endblock %}
