add view for users who update their info via messenger. add api place order. fix bug in order_logic

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -170,7 +170,7 @@
                                     <div class="control-group">
                                         <label class="span2 control-label" for="receiver">Người nhận:</label>
                                         <div class="controls">
-                                            <input type="text" id="phone" placeholder="Người nhận" name="receiver"
+                                            <input type="text" id="receiver" placeholder="Người nhận" name="receiver"
                                                    value="{{ user.displayName }}">
                                         </div>
                                     </div>
