--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,5 +1,18 @@
 {% extends 'mainapp/layout/main_frame.html' %}
 {% load static %}
+{% block custom_css %}
+    <style>
+        .tag {
+            background: url({% static 'mainapp/assets/img/new.png'  %}) no-repeat 0 0;
+            position: absolute;
+            display: block;
+            top: -4px;
+            right: -18px;
+            height: 48px;
+            width: 48px;
+        }
+    </style>
+{% endblock %}
 <!--
 Body Section
 -->
@@ -51,7 +64,7 @@ Body Section
                                                    href="{% url 'mainapp:product_detail' product_id=new_shoe.id %}"
                                                    title="{{ new_shoe.shoeName }}"><span
                                                         class="icon-search"></span> Xem chi tiết</a>
-
+                                                <a href="#" class="tag"></a>
                                                 <a href="{% url 'mainapp:product_detail' product_id=new_shoe.id %}"><img
                                                         src="{{ new_shoe.shoeThumbnail.url }}"
                                                         alt="{{ new_shoe.shoeName }}"></a>
@@ -73,7 +86,8 @@ Body Section
                                                         class="icon-search"></span> Xem chi tiết</a>
                                                 <a href="#" class="tag"></a>
                                                 <a href="{% url 'mainapp:product_detail' product_id=new_shoe.id %}"><img
-                                                        src="{{ new_shoe.shoeThumbnail.url }}" alt="{{ new_shoe.shoeName }}"></a>
+                                                        src="{{ new_shoe.shoeThumbnail.url }}"
+                                                        alt="{{ new_shoe.shoeName }}"></a>
                                             </div>
                                         </li>
                                     {% endfor %}
@@ -100,12 +114,14 @@ Body Section
                                     <div class="caption cntr">
                                         <p style="height: 50px">{{ shoe.shoeName }}</p>
                                         <p><strong> {{ span4_views_shoes_price|get_item:shoe.id }} ₫</strong></p>
-                                        <h4><a class="shopBtn" href="#" title="{{ shoe.shoeName }}"> Add to cart </a>
+                                        <h4><a class="shopBtn"
+                                               href="{% url 'mainapp:product_detail' product_id=shoe.id %}"
+                                               title="{{ shoe.shoeName }}"> Xem ngay </a>
                                         </h4>
-                                        <div class="actionList">
-                                            <a class="pull-left" href="#">Add to Wish List </a>
-                                            <a class="pull-left" href="#"> Add to Compare </a>
-                                        </div>
+                                        {#                                        <div class="actionList">#}
+                                        {#                                            <a class="pull-left" href="#">Add to Wish List </a>#}
+                                        {#                                            <a class="pull-left" href="#"> Add to Compare </a>#}
+                                        {#                                        </div>#}
                                         <br class="clr">
                                     </div>
                                 </div>
@@ -119,8 +135,9 @@ Body Section
         Featured Products
         -->
         <div class="well well-small">
-            <h3><a class="btn btn-mini pull-right" href="products.html" title="View more">VIew More<span
-                    class="icon-plus"></span></a> Sản phẩm được ưa thích </h3>
+            <h3><a class="btn btn-mini pull-right" href="{% url 'mainapp:products_url' %}?most_favorite=True"
+                   title="View more">Xem thêm <span
+                    class="icon-plus"></span></a> Được ưa thích </h3>
             <hr class="soften"/>
             <div class="row-fluid">
                 <ul class="thumbnails">
@@ -141,8 +158,8 @@ Body Section
                                                href="p{% url 'mainapp:product_detail' product_id=shoe.id %}"
                                                title="Click to view"><span
                                                     class="icon-zoom-in"></span></a>
-                                            <a class="shopBtn" href="#" title="add to cart"><span
-                                                    class="icon-plus"></span></a>
+{#                                            <a class="shopBtn" href="#" title="add to cart"><span#}
+{#                                                    class="icon-plus"></span></a>#}
                                             <span class="pull-right">{{ most_liked_shoes_price|get_item:shoe.id }} ₫</span>
                                         </h4>
                                     </div>
@@ -155,13 +172,17 @@ Body Section
         </div>
 
         <div class="well well-small">
-            <a class="btn btn-mini pull-right" href="#">View more <span class="icon-plus"></span></a>
-            Popular Products
+            <a class="btn btn-mini pull-right" href="{% url 'mainapp:products_url' %}?top_sale=True">Xem thêm <span
+                    class="icon-plus"></span></a>
+            Bán chạy
         </div>
         <hr>
         <div class="well well-small">
-            <a class="btn btn-mini pull-right" href="#">View more <span class="icon-plus"></span></a>
-            Best selling Products
+            <a class="btn btn-mini pull-right" href="{% url 'mainapp:products_url' %}?most_view=True">Xem thêm <span
+                    class="icon-plus"></span></a>
+            Xem nhiều
         </div>
+        <hr>
+
     </div>
 {% endblock %}
