--- a/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
+++ b/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
@@ -70,7 +70,8 @@
                 <a href="{% url 'cart:cart_url' %}"><span class="icon-shopping-cart"></span> {{ items_on_cart }} Item(s) - <span
                         class="badge badge-warning"> {{ total_products_price }} <sup>đ</sup></span></a>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'account:logout_url' %}"><span class="icon-remove-circle"></span> Đăng xuất</a>
+{#                    <a href="{% url 'account:logout_url' %}"><span class="icon-remove-circle"></span> Đăng xuất</a>#}
+                    <a href="{% url 'account:logout_url' %}"><span class="icon-heart"></span> Đăng xuất</a>
                 {% endif %}
             </div>
         </div>
